Fixed #105 New blog template looks very bad on IE8

--- a/css/ie.css
+++ b/css/ie.css
@@ -334,4 +334,6 @@ body {
 	.woocommerce-page #content .quantity input.qty {
 		line-height: 30px;
 	}
-
+	.listpost-content-wrap-large {
+		background: #FFF;
+	}
